Pets gain an xp multiplier
Having to grind up levels if you tame a lowlevel pet is annoying. I dont want to get rid of it completely, so I added a (configurable) multiplier.

--- a/src/mangosd/mangosd.conf.dist.in
+++ b/src/mangosd/mangosd.conf.dist.in
@@ -2975,3 +2975,11 @@ DynamicRespawn.AffectLevelBelow         = 0
 DynamicRespawn.PlayersThreshold         = 0
 DynamicRespawn.PlayersMaxLevelDiff      = 0
 
+###################################################################################################################
+#	WrkX Edit
+#
+#	WrkX.PetXPMultiplier
+#		The multiplier for the experience the pet gets.
+#		Default: 2
+###################################################################################################################
+WrkX.PetXPMultiplier					= 2
